[package]
name = "ibc-callbacks"
version = "0.0.0"
authors = ["Christoph Otter <chris@confio.gmbh>"]
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = { path = "../../../cosmwasm/packages/schema" }
cosmwasm-std = { path = "../../../cosmwasm/packages/std", features = ["iterator", "stargate"] }
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-vm = { path = "../../../cosmwasm/packages/vm", default-features = false, features = ["iterator", "stargate"] }
