[package]
name = "inner-contract"
version = "0.0.0"
authors = ["Aumetra Weisman <aumetra@cryptolab.net>"]
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = { path = "../../../../cosmwasm/packages/schema" }
cosmwasm-std = { path = "../../../../cosmwasm/packages/std", features = ["cosmwasm_1_4"] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }

[dev-dependencies]
cw-multi-test = "2.0.0"
